# agent_testbed

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
configs/: default_config.yaml
experiments/: README.md  benchmark.py  compare_prefix_caching.py  plot_results.py  run_benchmark.sh
src/: main.py
src/frontend/: profiler.py  query_generator.py
src/rag_pipeline/: ircot.py
src/retrieval/: dataset_loader.py  faiss_retriever.py
src/vllm_server/: decode_worker.py  prefill_worker.py  proxy_server.py
tests/: test_retriever.py
